# forex

./: .env.example  .gitignore  Makefile  README.md  README_PATCH.md  conftest.py  docker-compose.yml  forex_main_13_deep_completion_audit.md  forex_main_14_full_file_module_engine_audit.md  forex_main_3_1_deep_file_module_completion_audit.md  forex_main_4_1_full_file_module_engine_audit.md  forex_main_5_2_full_file_module_engine_audit.md  forex_main_6_1_full_file_module_engine_audit.md  forex_main_7_1_full_file_module_engine_audit.md  forex_main_8_1_full_file_module_engine_audit.md  forex_main_8_completion_audit.md  forex_main_9_1_deep_file_module_engine_audit.md  forex_main_9_completion_audit.md  pytest.ini  requirements-test.txt  turbo.json  verify_e2e_staging.sh
apps/api/: Dockerfile  __init__.py  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_trade_lifecycle_status.py  0003_live_trading_safety_ledger.py  0004_order_idempotency_reservations.py  0005_broker_order_attempts.py  0006_order_state_transitions.py  0007_broker_execution_receipts.py  0008_policy_approval_control_plane.py  0009_daily_profit_lock_policy.py  0010_order_state_machine.py  0011_account_snapshots_and_experiment_registry.py  0012_order_idempotency_projection.py  0013_reconciliation_queue.py  0014_orders_projection_and_transition_idempotency.py  0015_broker_attempt_gate_context_hash.py  0016_execution_receipt_contract.py  0017_reconciliation_queue_lease.py  0018_daily_lock_actions.py  0019_submit_outbox.py  0020_worker_heartbeats.py  0021_submit_outbox_events.py  0022_frozen_gate_contexts.py  0023_reconciliation_attempt_events.py  0024_provider_certification.py  (+5 more)
apps/api/app/: main.py
apps/api/tests/: test_action_approval_service_hardening.py  test_action_approvals.py  test_audit_5_2_patches.py  test_auth.py  test_bots.py  test_broker_capability_proof_hardlock.py  test_compliance_export.py  test_credentials_security.py  test_daily_lock_runtime_controller.py  test_daily_trading_state.py  test_disaster_recovery_admin.py  test_experiment_registry_service.py  test_incident_alerting.py  test_legacy_import_guard.py  test_live_ctrader_smoke.py  test_live_start_preflight_failclosed.py  test_live_trading_actions.py  test_order_ledger_integration_crash_after_submit.py  test_order_ledger_integrity_service.py  test_order_ledger_integrity_worker_entrypoint.py  test_order_ledger_service.py  test_order_ledger_uow.py  test_order_state_transitions.py  test_paper_trading_e2e.py  test_public.py  test_qa_parity_endpoint.py  test_reconciliation_daemon.py  test_risk_policy_control_plane.py  test_runtime_readiness_mode.py  test_runtime_snapshot_contract.py  test_strategy_governance.py  test_submit_outbox_service.py  test_worker_heartbeat_service.py  test_ws_auth.py
services/analytics-service/: pyproject.toml
services/analytics-service/analytics_service/: __init__.py  calmar.py  drawdown.py  equity_curve.py  expectancy.py  profit_factor.py  session_analysis.py  sharpe.py  streaks.py
services/billing-service/: pyproject.toml
services/billing-service/billing_service/: __init__.py  entitlements.py  plan_rules.py  stripe_client.py
services/execution-service/: pyproject.toml
services/execution-service/execution_service/: __init__.py  account_sync.py  ctrader_token_refresher.py  execution_engine.py  order_router.py  order_state_machine.py  parity_contract.py  reconciliation_worker.py  unknown_order_reconciler.py
services/execution-service/tests/: test_ctrader_provider_adapters.py  test_execution_engine_live_identity.py  test_execution_engine_receipt_timeout.py  test_execution_engine_smart_policy.py  test_execution_engine_submit_outbox_phases.py  test_order_state_machine.py  test_parity_contract.py  test_provider_contract_split.py  test_provider_hardening_phase3.py  test_reconciliation_worker.py  test_unknown_order_reconciler.py
services/notification-service/: pyproject.toml
services/notification-service/notification_service/: __init__.py  dispatcher.py
services/signal-service/: pyproject.toml
services/signal-service/signal_service/: __init__.py  broadcast.py  dlq_consumer.py  redis_consumer.py  scoring.py  signal_builder.py  signal_feed.py
services/signal-service/tests/: test_dlq_consumer.py
services/trading-core/: Dockerfile  pyproject.toml
services/trading-core/tests/: test_advanced_engine_guard.py  test_bot_runtime_live_hooks.py  test_broker_native_risk_context.py  test_broker_snapshot_utils.py  test_capital_manager_hard_cap.py  test_frozen_context_contract.py  test_instrument_spec_and_risk_builder.py  test_market_data_quality.py  test_position_sizing.py  test_pre_execution_gate.py  test_runtime_registry.py  test_runtime_registry_hook_wiring.py  test_unified_trade_pipeline.py  test_vector_store_persistence.py
services/trading-core/trading_core/: __init__.py  logging_utils.py
(+303 files in other folders)
