[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "api-app"
version = "0.1.0"
description = "FastAPI backend for the Forex trading platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "redis>=5.0",
    "aioredis>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "email-validator>=2.2",
    "sentry-sdk[fastapi]>=2.0",
    "stripe>=8.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20",
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "mypy>=1.8",
    "ruff>=0.2",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "C4"]
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "smoke: live sandbox smoke tests that require external credentials",
]
