[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "analytics-service"
version = "0.1.0"
description = "Performance analytics for the Forex platform"
requires-python = ">=3.11"
dependencies = ["pandas>=2.0", "numpy>=1.24", "scipy>=1.11", "pydantic>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "mypy>=1.8", "ruff>=0.2"]

[tool.hatch.build.targets.wheel]
packages = ["analytics_service"]
