[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "billing-service"
version = "0.1.0"
description = "Stripe billing and entitlement management"
requires-python = ">=3.11"
dependencies = ["stripe>=8.0", "pydantic>=2.0", "python-dotenv>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "mypy>=1.8", "ruff>=0.2"]

[tool.hatch.build.targets.wheel]
packages = ["billing_service"]
