[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "execution-service"
version = "0.1.0"
description = "Broker execution providers for the Forex platform"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "aiohttp>=3.9",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["execution_service"]
