[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notification-service"
version = "0.1.0"
description = "Multi-channel notifications (email, Telegram, Discord, webhook)"
requires-python = ">=3.11"
dependencies = ["aiohttp>=3.9", "aiosmtplib>=3.0", "pydantic>=2.0", "python-dotenv>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "mypy>=1.8", "ruff>=0.2"]

[tool.hatch.build.targets.wheel]
packages = ["notification_service"]
