[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trading-core"
version = "0.1.0"
description = "Core trading engines and BotRuntime for the Forex platform"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "openai>=1.0",
    "anthropic>=0.20",
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "asyncio-mqtt>=0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "mypy>=1.8",
    "ruff>=0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["trading_core"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
